--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ node_modules
 cdk.out
 
 
-src/Functions/**/bin
-src/Functions/**/obj
-
-src/Functions/**/*.zip
+src/**/bin
+src/**/obj
+src/**/*.zip
