--- a/src/ExampleSpace/ExampleSpace.csproj
+++ b/src/ExampleSpace/ExampleSpace.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <AssemblyName>Example3</AssemblyName>
+    <AssemblyName>ExampleSpace</AssemblyName>
     </PropertyGroup>
       
     <ItemGroup>
